syntax = "proto3";

package menu;

option go_package = "internal/proto/menu";

service MenuService {
  rpc GetMenu(GetMenuRequest) returns (GetMenuResponse);
}

message GetMenuRequest {
  string id = 1;
}

message GetMenuResponse {
  Menu menu = 1;
}

message Menu {
  string id = 1;
  int64 sort_order = 2;
  int64 category = 3;
  int64 sub_category = 4;
  int64 region = 5;
  string name = 6;
  string name_jpn = 7;
  int64 price = 8;
  int64 is_min_price = 9;
  int64 is_hidden = 10;
}
